fix: dropdown becoming visible when hovering over supposedly hidden body

--- a/ui/mods/mod_stronghold.css
+++ b/ui/mods/mod_stronghold.css
@@ -44,6 +44,7 @@
 
 .dropdown-container
 {
+	display: none;
 	overflow: auto;
 	width: 100%;
 	position: absolute !important;
@@ -51,13 +52,12 @@
 
 .dropdown-container-scroll
 {
-	display: none;
 	width: 100%;
 	position: absolute !important;
 	box-shadow: 0px 0px 16px black;
 }
 
-.dropdown:hover .dropdown-container-scroll
+.dropdown:hover .dropdown-container
 {
    display: block;
 }
